@@ -1,5 +1,7 @@
 package dw.cli.commands;
 
+import java.io.IOException;
+
 import com.google.common.base.Joiner;
 import com.martiansoftware.jsap.FlaggedOption;
 import com.martiansoftware.jsap.JSAP;
@@ -9,18 +11,25 @@ import com.martiansoftware.jsap.UnflaggedOption;
 
 import dw.cli.Command;
 import dw.cli.Output;
+import dw.cli.StdinReader;
 import dw.xmlrpc.DokuJClient;
 import dw.xmlrpc.exception.DokuException;
 
 public class PagePutter extends Command {
 	private final boolean _appendInsteadOfPut;
+	private final StdinReader _stdinReader;
 
 	public PagePutter(){
 		this(false);
 	}
 
 	public PagePutter(boolean appendInsteadOfPut){
+		this(appendInsteadOfPut, new StdinReader());
+	}
+
+	public PagePutter(boolean appendInsteadOfPut, StdinReader stdinReader){
 		_appendInsteadOfPut = appendInsteadOfPut;
+		_stdinReader = stdinReader;
 	}
 
 	@Override
@@ -31,7 +40,7 @@ public class PagePutter extends Command {
 			.setStringParser(JSAP.STRING_PARSER));
 
 		addPageIdOption(jsap);
-		jsap.registerParameter(new UnflaggedOption("rawWikiText").setRequired(true).setGreedy(true));
+		jsap.registerParameter(new UnflaggedOption("rawWikiText").setRequired(false).setGreedy(true));
 
 		jsap.registerParameter(new Switch("minor").setLongFlag("minor"));
 	}
@@ -39,7 +48,12 @@ public class PagePutter extends Command {
 	@Override
 	protected Output run(DokuJClient dokuClient)throws DokuException {
 		String pageId = _config.getString("pageId");
-		String rawWikiText = buildContent();
+		String rawWikiText;
+		try {
+			rawWikiText = buildContent();
+		} catch (IOException e) {
+			return new Output("Failed to read stdin: " + e.getMessage(), 1);
+		}
 		String summary = _config.getString("summary");
 		boolean minor = _config.getBoolean("minor");
 
@@ -52,7 +66,11 @@ public class PagePutter extends Command {
 		return new Output();
 	}
 
-	private String buildContent() {
-		return Joiner.on(" ").join(_config.getStringArray("rawWikiText"));
+	private String buildContent() throws IOException {
+		if ( _config.contains("rawWikiText")){
+			return Joiner.on(" ").join(_config.getStringArray("rawWikiText"));
+		} else {
+			return _stdinReader.readStdin();
+		}
 	}
 }
